; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_document.c_fz_page_presentation.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_document.c_fz_page_presentation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @fz_page_presentation(i32* %0, %struct.TYPE_4__* %1, i32* %2, float* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca float*, align 8
  %10 = alloca float, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %7, align 8
  store i32* %2, i32** %8, align 8
  store float* %3, float** %9, align 8
  %11 = load float*, float** %9, align 8
  %12 = icmp ne float* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %4
  %14 = load float*, float** %9, align 8
  store float 0.000000e+00, float* %14, align 4
  br label %16

15:                                               ; preds = %4
  store float* %10, float** %9, align 8
  br label %16

16:                                               ; preds = %15, %13
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %18 = icmp ne %struct.TYPE_4__* %17, null
  br i1 %18, label %19, label %38

19:                                               ; preds = %16
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = bitcast {}** %21 to i32* (i32*, %struct.TYPE_4__*, i32*, float*)**
  %23 = load i32* (i32*, %struct.TYPE_4__*, i32*, float*)*, i32* (i32*, %struct.TYPE_4__*, i32*, float*)** %22, align 8
  %24 = icmp ne i32* (i32*, %struct.TYPE_4__*, i32*, float*)* %23, null
  br i1 %24, label %25, label %38

25:                                               ; preds = %19
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %27 = icmp ne %struct.TYPE_4__* %26, null
  br i1 %27, label %28, label %38

28:                                               ; preds = %25
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = bitcast {}** %30 to i32* (i32*, %struct.TYPE_4__*, i32*, float*)**
  %32 = load i32* (i32*, %struct.TYPE_4__*, i32*, float*)*, i32* (i32*, %struct.TYPE_4__*, i32*, float*)** %31, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %35 = load i32*, i32** %8, align 8
  %36 = load float*, float** %9, align 8
  %37 = call i32* %32(i32* %33, %struct.TYPE_4__* %34, i32* %35, float* %36)
  store i32* %37, i32** %5, align 8
  br label %39

38:                                               ; preds = %25, %19, %16
  store i32* null, i32** %5, align 8
  br label %39

39:                                               ; preds = %38, %28
  %40 = load i32*, i32** %5, align 8
  ret i32* %40
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
